--- a/public/static/edit-document.html
+++ b/public/static/edit-document.html
@@ -2,7 +2,7 @@
     <h3 class="modal-title">Edit: {{item.data._id.$id}}</h3>
 </div>
 <div class="modal-body" id="json-editor">
-    <ui-codemirror ui-codemirror-opts="editorOptions" ng-model="item.json |decodeObj"></ui-codemirror>
+    <ui-codemirror ui-codemirror-opts="editorOptions" ng-model="item.json"></ui-codemirror>
     <small>Press <strong>F11</strong> when cursor is in the editor to
         toggle full screen editing. <strong>Esc</strong> can also be used
         to <i>exit</i> full screen editing.</small>
