--- a/public/static/home.html
+++ b/public/static/home.html
@@ -22,8 +22,8 @@
           <td class="col-xs-2">{{db.collection.length}}</td>
           <td class="col-xs-2">{{db.sizeOnDisk | readableSize}}</td>
           <td class="col-xs-2">
-              <button  class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Drop</button>
-              <button  class="btn btn-default btn-xs"><i class="fa fa-pencil fa-fw"></i> Rename</button>
+              <button ng-click="dropDb(db.name)"  class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Drop</button>
+              <button ng-click="renameDatabase(db.name)"  class="btn btn-default btn-xs"><i class="fa fa-pencil fa-fw"></i> Rename</button>
             </td>
         </tr>
   </tbody>
