--- a/public/static/db.html
+++ b/public/static/db.html
@@ -26,7 +26,7 @@
                             <button ng-click="dropCollection(currentDb, collection.name)" class="btn btn-danger btn-xs">
                             <i class="fa fa-trash fa-fw"></i> Drop
                             </button>
-                            <button ng-click="renameCollection(currentDb, collection.name)" class="btn btn-default btn-xs">
+                            <button ng-click="renameCollection(currentDb, collection.name)" class="btn btn-white btn-xs">
                                 <i class="fa fa-pencil fa-fw"></i> Rename
                             </button>
                         </td>
