--- a/public/static/home.html
+++ b/public/static/home.html
@@ -1,33 +1,37 @@
-<div  >
-  <tabset>
-    <tab heading="Databases">
-        <table  class="table  table-hover .table-bordered table-striped">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Name</th>
-              <th>Collections</th>
-              <th> Size On Disk</th>
-              <th>Actions</th>
-          </tr>
-      </thead>
-      <tbody class="anim-fade">
-        <tr ng-repeat="db in dbs | orderBy: 'name'" ng-mouseover="showBtn=1" ng-mouseleave="showBtn=0">
-          <td class="col-xs-1" scope="row" >{{$index}}</td>
-          <td class="col-xs-3">
-              <a ui-sref="db({db_name: db.name})" ng-click="browseDB(db.name)">
-              <i class='fa fa-database fa-fw'></i>  {{db.name}}
-              </a>
-          </td>
-          <td class="col-xs-2">{{db.collection.length}}</td>
-          <td class="col-xs-2">{{db.sizeOnDisk | readableSize}}</td>
-          <td class="col-xs-2">
-              <button ng-click="dropDb(db.name)"  class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i> Drop</button>
-              <button ng-click="renameDatabase(db.name)"  class="btn btn-white btn-xs"><i class="fa fa-pencil fa-fw"></i> Rename</button>
-            </td>
-        </tr>
-  </tbody>
-</table>
-</tab>
-</tabset>
+<div>
+    <tabset>
+        <tab heading="Databases">
+            <table class="table  table-hover .table-bordered table-striped">
+                <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Collections</th>
+                    <th> Size On Disk</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody class="anim-fade">
+                <tr ng-repeat="db in dbs | orderBy: 'name'" ng-mouseover="showBtn=1" ng-mouseleave="showBtn=0">
+                    <td class="col-xs-1" scope="row">{{$index}}</td>
+                    <td class="col-xs-3">
+                        <a ui-sref="db({db_name: db.name})" ng-click="browseDB(db.name)">
+                            <i class='fa fa-database fa-fw'></i> {{db.name}}
+                        </a>
+                    </td>
+                    <td class="col-xs-2">{{db.collection.length}}</td>
+                    <td class="col-xs-2">{{db.sizeOnDisk | readableSize}}</td>
+                    <td class="col-xs-2">
+                        <button ng-click="dropDb(db)" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i>
+                            Drop
+                        </button>
+                        <button ng-click="renameDatabase(db.name)" class="btn btn-white btn-xs"><i
+                                class="fa fa-pencil fa-fw"></i> Rename
+                        </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </tab>
+    </tabset>
 </div>
