Fix Home.Db size

--- a/public/static/db.html
+++ b/public/static/db.html
@@ -1,7 +1,10 @@
 <!-- Collection List -->
 <div class="">
     <tabset>
-        <tab heading="Collections">
+        <tab>
+            <tab-heading>
+                <i class="fa fa-table fa-fw"></i> Collections
+            </tab-heading>
             <table class="table  table-hover .table-bordered table-striped">
                 <thead>
                 <tr>
@@ -36,10 +39,13 @@
         </tab>
 
         <!-- Stats -->
-        <tab heading="Database Statistats">
+        <tab>
+            <tab-heading>
+                <i class="fa fa-info-circle fa-fw"></i>Statistats
+            </tab-heading>
             <table class="table  table-hover .table-bordered table-striped">
                 <tr>
-                    <td>DB</td>
+                    <td>Database Name</td>
                     <td>{{db_stats.db}}</td>
                 </tr>
                 <tr>
