--- a/public/static/home.html
+++ b/public/static/home.html
@@ -7,7 +7,7 @@
                     <th>#</th>
                     <th>Name</th>
                     <th>Collections</th>
-                    <th> Size On Disk</th>
+                    <th> Size</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -20,7 +20,7 @@
                         </a>
                     </td>
                     <td class="col-xs-2">{{::db.collection.length}}</td>
-                    <td class="col-xs-2">{{::db.sizeOnDisk | readableSize}}</td>
+                    <td class="col-xs-2">{{::db.stats._size | readableSize}}</td>
                     <td class="col-xs-2">
                         <button ng-click="dropDb(db)" class="btn btn-danger btn-xs"><i class="fa fa-trash fa-fw"></i>
                             Drop
