--- a/public/static/collections.html
+++ b/public/static/collections.html
@@ -2,7 +2,7 @@
 <div>
     <div class="editor-wrapper" ng-controller="SearchController">
         <div ui-codemirror="{ onLoad : codemirrorLoaded }"
-                ng-model="query"
+                ng-model="search.query"
                 resizable-div class="code-editor"
                 ui-codemirror-opts="editorOptions"
                 ui-refresh="editorAsForm"
@@ -15,11 +15,13 @@
         </button>
     </div>
 
+    <div ng-show="documents.documents.length">
     <pagination ng-change="pageChanged()" total-items="documents.count" ng-model="currentPage"
                 items-per-page="paginationCount" max-size="20" class="pagination-sm" boundary-links="true"
                 rotate="false"></pagination>
+
     <div class="documents anim-fade" id="documents">
-        <div ng-repeat="doc in documents.items">
+        <div ng-repeat="doc in documents.documents">
             <div class="tools">
                 <button ng-click="editDocument(doc)" class="btn btn-sm btn-white"><i class="fa fa-pencil fa-fw"></i>
                     Edit
@@ -35,4 +37,5 @@
     <pagination ng-change="pageChanged()" total-items="documents.count" ng-model="currentPage"
                 items-per-page="paginationCount" max-size="20" class="pagination-sm" boundary-links="true"
                 rotate="false"></pagination>
+    </div>
 </div>
